--- a/Bubble Bobble2/Bubble Bobble2.vcxproj
+++ b/Bubble Bobble2/Bubble Bobble2.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="CItem.cpp" />
     <ClCompile Include="CObstacle.cpp" />
     <ClCompile Include="CStage2.cpp" />
+    <ClCompile Include="CStage5.cpp" />
     <ClCompile Include="CText.cpp" />
     <ClCompile Include="CStage1.cpp" />
   </ItemGroup>
@@ -190,6 +191,7 @@
     <ClInclude Include="CSoundManager.h" />
     <ClInclude Include="CFactory.h" />
     <ClInclude Include="CStage2.h" />
+    <ClInclude Include="CStage5.h" />
     <ClInclude Include="CText.h" />
     <ClInclude Include="enum.h" />
     <ClInclude Include="global.h" />
